# threema-ios

./: .gitattributes  .gitconfig  .gitignore  .libthreema-version  .saltyrtc-version  .swiftformat  .webrtc-version  BUILD_WEBRTC.md  CONTRIBUTING.md  Cartfile  Cartfile.resolved  Makefile  MockgroupCallParticipantInfoFetcher.swift  README.md  SECURITY.md  ScreenshotsWithDataWork-Info.plist  ThreemaForWork-Info.plist  carthage-build.sh  iTunesArtwork  mise.toml
BinUtils/: BinUtils.swift
Configurations/: SharedConfig.xcconfig
Coordinator/: Package.swift
FileUtility/: Package.resolved  Package.swift
GroupCalls/: Package.resolved  Package.swift  README.md
Keychain/: Package.resolved  Package.swift
NaClCrypto/: NaClCrypto+KeyPair.swift  NaClCrypto.h  NaClCrypto.m
RemoteSecret/: Package.resolved  Package.swift
RemoteSecretProtocol/: Package.resolved  Package.swift
Resources/: ThreemaWorkLaunchScreen.storyboard  license.html
ScreenshotsWithData/: MakeScreenshots.swift  Screenshots-Bridging-Header.h  ScreenshotsConsumer.xctestplan  ScreenshotsOnPrem.xctestplan  ScreenshotsWork.xctestplan  SnapshotHelper.swift
Settings.bundle/: Root.plist
SharedResources/: ThreemaLaunchScreen.storyboard  ThreemaOnPremLaunchScreen.storyboard
TTTAttributedLabel/: TTTAttributedLabel.m
Threema/: AbstractGroupMessage.h  AbstractGroupMessage.m  AbstractMessage.h  AbstractMessage.m  ActivityUtil.h  ActivityUtil.m  AddContactViewController.h  AddContactViewController.m  AddMemberCell.h  AddMemberCell.m  AddThreemaChannelController.h  AddThreemaChannelController.m  AdvancedSettingsViewController.h  AdvancedSettingsViewController.m  AlbumManager.swift  AnimGifMessageLoader.h  AnimGifMessageLoader.m  AnimatedNavigationController.h  AnimatedNavigationController.m  Animations.h  Animations.m  AppDelegate+Observation.swift  AppDelegate+Swift.swift  AppDelegate.h  AppDelegate.m  AppFilesMigration.swift  AppLaunchTasks.swift  AppMigration.swift  AppearanceSettingsViewController.swift  AudioMessageSender.h  AudioMessageSender.m  AudioRecorder.h  AudioRecorder.m  AudioTrackAnalyzer.h  AudioTrackAnalyzer.m  AvatarMaker.h  AvatarMaker.m  BackgroundTaskManager.swift  (+769 more)
Threema Tests/: CallsignalingProtocolTests.swift  DateFormatterTests.swift  DateFormatterTests_de_DE.swift  DateFormatterTests_en_US.swift  DateFormatterTests_fr_CH.swift  DbLoadTests.swift  DummyDataCreator.h  DummyDataCreator.m  EntityDestroyerTests.swift  HttpClientDownloadSafeTests.swift  HttpClientUploadSafeTests.swift  IDNSafetyHelperTests.swift  MDMSetupMock.swift  MdmSetupTests.m  NSBundle+OverrideLanguage.h  NSBundle+OverrideLanguage.m  NSBundle+OverrideObjectForInfoDictionaryKey.h  NSBundle+OverrideObjectForInfoDictionaryKey.m  NSDate+DateSwizzling.h  NSDate+DateSwizzling.m  NSLocale+OverrideLocale.h  NSLocale+OverrideLocale.m  NSObject+Swizzling.h  NSObject+Swizzling.m  PendingMessageTests.swift  PendingMessagesManagerTests.swift  PhotosRightsHelperMock.swift  PhotosRightsHelperTest.swift  SafeConfigManagerMock.swift  SafeTests.swift  ScreenshotJsonImporter.m  ScreenshotJsonParser.h  ScreenshotJsonParser.m  TestLocale.h  TestLocale.m  TestLoggerMock.h  TestLoggerMock.m  TestObjectFactory.h  TestObjectFactory.m  TestUtil.h  (+10 more)
Threema.xcodeproj/: project.pbxproj
saltyrtc-task-relayed-data-rs/: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml
saltyrtc-task-relayed-data-rs/.cargo/: audit.toml
saltyrtc-task-relayed-data-rs/.circleci/: config.yml
saltyrtc-task-relayed-data-rs/examples/: testclient.rs
saltyrtc-task-relayed-data-rs/ffi/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  meson.build  saltyrtc_task_relayed_data_ffi.h
saltyrtc-task-relayed-data-rs/ffi/.cargo/: audit.toml
saltyrtc-task-relayed-data-rs/ffi/src/: connection.rs  constants.rs  lib.rs  nonblocking.rs  saltyrtc_client_ffi.rs
saltyrtc-task-relayed-data-rs/ffi/tests/: disconnect.c  integration.c  integration.rs
saltyrtc-task-relayed-data-rs/src/: errors.rs  lib.rs
saltyrtc-task-relayed-data-rs/tests/: integration.rs
scripts/BuildRustLibrary/Tests/BuildRustLibraryScriptTests/rust-library/lib/: Cargo.toml
scripts/BuildRustLibrary/Tests/BuildRustLibraryScriptTests/rust-library/lib/src/: lib.rs
(+4781 files in other folders)
