[package]
name = "saltyrtc-task-relayed-data-ffi"
version = "0.2.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]

[lib]
name = "saltyrtc_task_relayed_data_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1"  # Required by log4rs
lazy_static = "1"
libc = "0.2"
log = "0.4"
log4rs = { version = "1", features = ["console_appender"], default-features = false }
rmp-serde = "0.13"
saltyrtc-client = "0.9"
saltyrtc-task-relayed-data = { path = ".." }
tokio-core = "0.1"
tokio-timer = "0.1"

[build-dependencies]
cbindgen = "0.9"

[dev-dependencies]
lazy_static = "1.0"
tokio-process = "0.1"

[profile.release]
lto = true

[patch.crates-io]
traitobject = { git = "https://github.com/philip-peterson/destructure_traitobject", rev = "d49b0af9087b3b7848d19d5baae43948ebc7fb9d" }
